# cattle-counter-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  celery_worker.py  main.py  schemas.py
src/celery/: worker.py
src/db/config/: base.py  connection.py  connection_test.py
src/db/entities/: images.py
src/db/repositories/: image_repository.py
src/errors/: write_file_error.py
src/services/: upload_image.py
