[tool.poetry]
name = "cattle-counter-api"
version = "0.1.0"
description = ""
authors = ["Guilherme Sampaio <guilhermefs09@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
pytest = "^8.3.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
psycopg2-binary = "^2.9.9"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.18.0"
celery = "4.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
